--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
+.todo-app-background-container{
+  height: 100vh;
+  padding: 0px;
+  overflow: auto;
+  background-color: rgb(222, 222, 243);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-dark-background-container{
+  height: 100vh;
+  padding: 0px;
+  overflow: auto;
+  background-color:  rgb(32, 32, 32);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(202, 200, 200);
+  width: 100%;
+  height: 9vh;
+  background-color: white;
+}
+
+.dark-header{
+  background-color: rgb(44, 44, 44);
+}
+
+.search-conatiner{
+  display: flex;
+  border: 0px solid black;
+  background-color: rgb(236, 236, 236);
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 50%;
+  height: 80%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 10px;
+}
+
+.dark-search-container{
+  background-color: rgb(95, 95, 95);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input-search-element{
+  width: 100%;
+  height: 20px;
+  background-color: transparent;
+  outline: none;
+  font-size: 14px;
+  border: none;
+  margin-left: 15px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dark-input-search-element::placeholder {
+  color: rgb(212, 210, 210);
+}
+
+.dark-input-search-element{
+  font-weight: 400;
+}
+
+.search-todo-button{
+  height: 20px;
+  width: 60px;
+  border-radius: 30px;
+}
+
+.theme-container{
+  display: flex;
+}
+
+.theme-container:hover{
+  cursor: pointer;
+}
+
+.dark-icon{
+  height: 20px;
+  width: 20px;
+  margin-right: 30px;
+}
+
+.header-icon{
+  height: 20px;
+  width: 20px;
+}
+
+.dark-header-icon{
+  color: white;
+}
+
+.light-icon{
+  height: 20px;
+  width: 20px;
+  color: rgb(209, 209, 209);
+  margin-right: 30px;
+}
+
+.app-name{
+  color:  rgb(78, 76, 76);
+  font-size: 20px;
+  text-align: center;
+  margin-left: 40px;
+  font-weight: 600;
+}
+
+.dark-app-name{
+  color: rgb(235, 235, 235);
 }
